--- a/SubscriptionManager/SubscriptionManager.csproj
+++ b/SubscriptionManager/SubscriptionManager.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
+    <PackageReference Include="Syncfusion.Blazor.Cards" Version="22.2.8" />
+  </ItemGroup>
+
 </Project>
